results/71747fd652eb5dec2bb2d290d26401a8/err_code.txt
  File "./pyfile.py", line 18
    runitem = MCMCWrapper(try:
                            ^
SyntaxError: invalid syntax
